# custom-package-py

./: .gitignore  README.md  pyproject.toml  setup.py
de_classes/: codigos_error.csv  estructura_nodos_xml.csv  mysql_db_admin.py  process_mysql.py  referencia_geografica.csv  utils.py
de_classes/signature_providers/factury/: factury_service_client.py
de_classes/xsd_files/: DE_v150.xsd
