[tool.poetry]
name = "custom-package-py"
version = "0.1.0"
description = ""
authors = ["Edgar Valdez <edgarvaldez99@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "custom_package_py"}]

[tool.poetry.dependencies]
python = "3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
