[project]
name = "custom_package_py"
version = "0.0.0"
description = ""
requires-python = ">=3.8"
authors = [{name = "Edgar Valdez", email = "edgarvaldez99@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
classifiers=[
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.9",
]
dependencies = [
  "requests >= 2.28.2",
  "lxml >= 4.9.2",
  "SQLAlchemy >= 2.0.6",
  "pyOpenSSL >= 23.1.1",
  "zeep >= 4.2.1",
  "pytz >= 2022.7.1"
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["de_classes", "set"]
exclude = ["setup.py"]
